--- a/css/style.css
+++ b/css/style.css
@@ -648,3 +648,20 @@ td a:hover {
 .fling-minislide img:nth-child(3){animation-delay:5s;}
 .fling-minislide img:nth-child(2){animation-delay:10s;}
 .fling-minislide img:nth-child(1){animation-delay:15s;}
+
+.section-heading {
+  color: darkblue;
+  margin-left: 1px;   /* Main section headings */
+  margin-top: 2.5em;
+  margin-bottom: 0.7em;
+  font-weight: bold;
+}
+
+.subsection-heading {
+  color: #4B2E83;
+  margin-left: 30px;   /* Subsection headings, adjust as needed */
+  margin-top: 2em;
+  margin-bottom: 0.5em;
+  font-size: 1.15em;
+  font-weight: bold;
+}
